2004-01-26  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-utils.h: added CR_FILE_NOT_FOUND_ERROR to
	the CRStatus enum.

2004-01-24  Dodji Seketeli  <dodji@gnome.org>

	* all: separated the library into two projects. Libcroco
	is now the combination of the parser and the selection engine.
	A new project is born: sewfox. It is basically the 
	xml rendering/layout engine.
	Libcroco now needs libxml2 and glib only.
	Sewfox need libgnomecanvas2.
	* autogen.sh: updated this to reflect this big change
	* tests/test-output-refs/test7.out: removed this test
	as it does not belong to libcroco anymore.

2004-01-16  Dodji Seketeli  <dodji@gnome.org>

	* src/seleng/cr-sel-eng.c: applied a patch from
	Rob BUIS<rwlbuis@xs4all.nl> for a better class selector
	evaluation.

2004-01-04  Dodji Seketeli  <dodji@gnome.org>

	* src/parser/cr-declaration.c: 
	(cr_declaration_unlin): fixed a bug spoted by
	Rob BUIS.

2003-12-27  Dodji Seketeli  <dodji@gnome.org>

	* csslint/csslint.c: did some fixes/cleanup here.
	Make sure csslint --help shows a proper help.
	* src/parser/cr-statement.c: 
	(cr_statement_dump): when a NULL statement is given, do
	not dump anything, instead considering this as an error.
	* src/parser/cr-stylesheet.c: 
	(cr_stylesheet_dump): give the possibility to dump
	empty sheets, instead of considering this case as
	an error case.
	
2003-12-24  Dodji Seketeli  <dodji@gnome.org>

	* src/parser/cr-additional-sel.h,src/parser/cr-pseudo.h,
	src/parser/cr-utils.h: some light cosmetic changes.
	* src/seleng/cr-sel-eng.c: several fixes. Managed to
	make the pluggable handler for pseudo class selectors
	evaluation work. Wrote a handler for the ":first-child"
	pseudo class selector. This class is now officially supported.

2003-12-24  Dodji Seketeli  <dodji@gnome.org>

	* src/parser/cr-additional-sel.h: small cosmetic changes.
	* src/seleng/cr-sel-eng.c: started to work on the
	support of a pluggable handler for pseudo class selectors