@@ -3,8 +3,6 @@
 /*
  * This file is part of The Croco Library
  *
- * Copyright (C) 2002-2003 Dodji Seketeli <dodji@seketeli.org>
- *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of version 2.1 of the 
  * GNU Lesser General Public
@@ -20,6 +18,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
  * USA
+ *
  */
 
 /*
@@ -60,12 +59,13 @@ CRStyleSheet *
 cr_cascade_get_sheet (CRCascade *a_this,
                       enum CRStyleOrigin a_origin) ;
 
-enum CRStatus
-cr_cascade_set_sheet (CRCascade *a_this,
-                      CRStyleSheet *a_sheet,
-                      enum CRStyleOrigin a_origin) ;
-void
-cr_cascade_destroy (CRCascade *a_this) ;
+enum CRStatus cr_cascade_set_sheet (CRCascade *a_this,
+                                    CRStyleSheet *a_sheet,
+                                    enum CRStyleOrigin a_origin) ;
+
+void cr_cascade_unref (CRCascade *a_this) ;
+
+void cr_cascade_destroy (CRCascade *a_this) ;
 
 G_END_DECLS
 
