@@ -29,7 +29,8 @@
 #define __CR_OM_PARSER_H__
 
 #include "cr-parser.h"
-#include "cr-stylesheet.h"
+#include "cr-cascade.h"
+
 
 /**
  *@file
@@ -57,17 +58,17 @@ struct _CROMParser
 CROMParser *
 cr_om_parser_new (CRInput *a_input) ;
 
-enum CRStatus
-cr_om_parser_parse_file (CROMParser *a_this,
-                         const guchar *a_file_uri,
-                         enum CREncoding a_enc,
-                         CRStyleSheet **a_result) ;
 
 enum CRStatus
 cr_om_parser_simply_parse_file (const guchar *a_file_path,
                                 enum CREncoding a_enc,
                                 CRStyleSheet **a_result) ;
 
+enum CRStatus
+cr_om_parser_parse_file (CROMParser *a_this,
+                         const guchar *a_file_uri,
+                         enum CREncoding a_enc,
+                         CRStyleSheet **a_result) ;
 enum CRStatus
 cr_om_parser_simply_parse_buf (const guchar *a_buf,
                                gulong a_len,
@@ -80,6 +81,21 @@ cr_om_parser_parse_buf (CROMParser *a_this,
                         gulong a_len,
                         enum CREncoding a_enc,
                         CRStyleSheet **a_result) ;
+
+enum CRStatus
+cr_om_parser_parse_paths_to_cascade (CROMParser *a_this,
+                                     const guchar *a_author_path,
+                                     const guchar *a_user_path,
+                                     const guchar *a_ua_path,
+                                     enum CREncoding a_encoding,
+                                     CRCascade ** a_result) ;
+
+enum CRStatus
+cr_om_parser_simply_parse_paths_to_cascade (const guchar *a_author_path,
+                                            const guchar *a_user_path,
+                                            const guchar *a_ua_path,
+                                            enum CREncoding a_encoding,
+                                            CRCascade ** a_result) ;
 
 void
 cr_om_parser_destroy (CROMParser *a_this) ;
